added score tracking

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1 class = "texts">Welcome to Metatton's quiz show!!</h1>
     </div>
 
+    <h2 class = "texts">SCORE: <span id = "score">0</span></h2>
+
     <div class = "mainImage">
         <img class = "icon" src="MettatonGif.gif" alt="Metatton">
     </div>
